# YouTubick

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  prepare_volumes.sh  pyproject.toml  requirements.txt
app/: app.py  config.py  robots.txt
app/routes/: download.py  live_play.py  main.py  work.py
app/services/: __init__.py  downloaders.py  handlers.py  tasks.py  utils.py  youtube.py
app/static/: sitemap.xml
app/static/js/: copy.js  main.js  scheme_button.js
app/static/templates/: base.html  error.html  help_support.html  index.html  support_help.html
bot/: README.md  config.py  main.py  trash.py
bot/handlers/custom_handlers/: __init__.py  youtube.py
bot/handlers/default_handlers/: echo.py  help.py  start.py
bot/states/: states.py
config/: config.py  logging_config.py
vhost.d/: youtubick.com
