[tool.poetry]
name = "youtubick"
version = "0.1.0"
description = "YouTube video processing application"
authors = ["aleksei_rodimkin <alexeyrodimkin@gmail.com>"]
license = ""
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
yt-dlp = "^2025.4.30"
python-dotenv = "^1.0.0"
jinja2 = "^3.1.6"
aiohttp = "^3.11.18"
aiofiles = "^24.1.0"
gunicorn = "^23.0.0"
[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"